--- a/TobotApp/src/main/res/layout/activity_get_sensor_detect.xml
+++ b/TobotApp/src/main/res/layout/activity_get_sensor_detect.xml
@@ -52,6 +52,7 @@
     <View
         style="@style/view_line"
         android:layout_marginLeft="@dimen/view_margin_left_right"
+        android:layout_marginTop="@dimen/view_margin_top"
         android:layout_marginRight="@dimen/view_margin_left_right" />
 
     <LinearLayout
