--- a/TobotApp/src/main/res/layout/view_rubber_edit.xml
+++ b/TobotApp/src/main/res/layout/view_rubber_edit.xml
@@ -1,30 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
     android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/tv_back"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/selector_btn_circle_bg"
-        android:gravity="center"
-        android:text="@string/tv_back"
-        android:textColor="@drawable/selector_tv_stop"
-        android:textSize="@dimen/tv_content" />
-
     <RadioGroup
         android:id="@+id/rg_wipe"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/rb_wall_margin"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        tools:ignore="UselessParent">
+
+        <RadioButton
+            android:id="@+id/rb_back"
+            style="@style/rb_map_operate"
+            android:text="@string/tv_back" />
 
         <RadioButton
             android:id="@+id/rb_wipe_white"
             style="@style/rb_map_operate"
+            android:layout_marginLeft="@dimen/rb_wall_margin"
             android:text="@string/tv_wipe_white" />
 
         <RadioButton
@@ -37,13 +34,6 @@
             android:id="@+id/rb_wipe_black"
             style="@style/rb_map_operate"
             android:layout_marginLeft="@dimen/rb_wall_margin"
-            android:text="@string/tv_wipe_black"
-            android:visibility="gone" />
-
-        <RadioButton
-            android:id="@+id/rb_wipe_cancel"
-            style="@style/rb_map_operate"
-            android:layout_marginLeft="@dimen/rb_wall_margin"
-            android:text="@string/tv_wipe_cancel" />
+            android:text="@string/tv_wipe_black" />
     </RadioGroup>
 </LinearLayout>
