--- a/TobotApp/src/main/res/layout/fragment_about_app.xml
+++ b/TobotApp/src/main/res/layout/fragment_about_app.xml
@@ -40,6 +40,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/view_margin_top"
+                        android:gravity="center"
                         android:lineSpacingExtra="@dimen/tv_version_line_space"
                         android:text="@string/tv_version"
                         android:textColor="@color/tv_tips"
