--- a/TobotApp/src/main/res/layout/activity_navigate_option.xml
+++ b/TobotApp/src/main/res/layout/activity_navigate_option.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:focusable="true"
@@ -191,7 +192,8 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
-                        android:background="@drawable/selector_switch" />
+                        android:background="@drawable/selector_switch"
+                        tools:ignore="RelativeOverlap" />
                 </RelativeLayout>
 
                 <View style="@style/view_line" />
