--- a/TobotApp/src/main/res/drawable/shape_drag_bg.xml
+++ b/TobotApp/src/main/res/drawable/shape_drag_bg.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
+    android:shape="oval">
     <stroke
         android:width="@dimen/shape_drag_stroke_width"
-        android:color="@color/shape_btn_circle_normal" />
+        android:color="@color/shape_popup_bg" />
 </shape>
