--- a/TobotApp/src/main/res/layout/activity_task_point_select.xml
+++ b/TobotApp/src/main/res/layout/activity_task_point_select.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -15,19 +16,20 @@
         android:layout_marginLeft="@dimen/view_margin_left_right"
         android:layout_marginTop="@dimen/view_margin_top"
         android:layout_marginRight="@dimen/view_margin_left_right"
-        android:layout_marginBottom="@dimen/view_margin_top">
+        android:layout_marginBottom="@dimen/view_margin_top"
+        android:visibility="gone">
 
-        <TextView
-            android:id="@+id/tv_select_all"
+        <Button
+            android:id="@+id/btn_remove_point"
+            style="?android:attr/borderlessButtonStyle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:drawableLeft="@drawable/selector_select"
-            android:drawablePadding="@dimen/rb_padding"
-            android:gravity="center_vertical"
-            android:text="@string/tv_select_all"
-            android:textColor="@drawable/selector_tv_map_item"
-            android:textSize="@dimen/tv_content" />
+            android:layout_height="@dimen/btn_height"
+            android:background="@drawable/selector_btn_over_delete_bg"
+            android:paddingLeft="@dimen/view_margin_left_right"
+            android:paddingRight="@dimen/view_margin_left_right"
+            android:text="@string/btn_remove_point"
+            android:textColor="@color/tv_white"
+            android:textSize="@dimen/btn_tv_size" />
 
         <Button
             android:id="@+id/btn_confirm"
@@ -36,20 +38,32 @@
             android:layout_height="@dimen/btn_height"
             android:layout_alignParentRight="true"
             android:background="@drawable/selector_btn_task_confirm_bg"
-            android:enabled="false"
             android:paddingLeft="@dimen/view_margin_left_right"
             android:paddingRight="@dimen/view_margin_left_right"
             android:text="@string/btn_confirm"
             android:textColor="@color/tv_white"
-            android:textSize="@dimen/btn_tv_size" />
+            android:textSize="@dimen/btn_tv_size"
+            tools:ignore="RelativeOverlap" />
     </RelativeLayout>
+
+    <TextView
+        android:id="@+id/tv_select_tips"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/view_head"
+        android:layout_marginLeft="@dimen/view_margin_left_right"
+        android:layout_marginRight="@dimen/view_margin_left_right"
+        android:gravity="center"
+        android:textColor="@color/tv_content"
+        android:textSize="@dimen/tv_tips"
+        android:visibility="gone" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_point"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/rl_bottom"
-        android:layout_below="@id/view_head"
+        android:layout_below="@id/tv_select_tips"
         android:layout_marginLeft="@dimen/view_margin_left_right"
         android:layout_marginRight="@dimen/view_margin_left_right"
         android:overScrollMode="never" />
