--- a/TobotApp/src/main/res/layout/dialog_task_execute_confirm.xml
+++ b/TobotApp/src/main/res/layout/dialog_task_execute_confirm.xml
@@ -56,7 +56,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/tv_charge_switch_tips"
-                    android:textColor="@color/tv_warn_tips"
+                    android:textColor="@color/tv_tips"
                     android:textSize="@dimen/tv_mode_tips" />
 
                 <View
@@ -109,7 +109,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/wheelView_margin_top"
                     android:text="@string/tv_loop_tips"
-                    android:textColor="@color/tv_warn_tips"
+                    android:textColor="@color/tv_tips"
                     android:textSize="@dimen/tv_mode_tips" />
 
                 <View
