更新jar与界面

--- a/TobotApp/src/main/res/layout/activity_move.xml
+++ b/TobotApp/src/main/res/layout/activity_move.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:focusable="true"
@@ -25,7 +26,8 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="@dimen/view_set_margin_left_right"
                 android:layout_marginRight="@dimen/view_set_margin_left_right"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                tools:ignore="UselessParent">
 
                 <TextView
                     style="@style/tv_content"
