--- a/TobotApp/src/main/res/layout/fragment_download.xml
+++ b/TobotApp/src/main/res/layout/fragment_download.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:focusable="true"
@@ -11,7 +12,8 @@
         android:layout_marginLeft="@dimen/view_set_margin_left_right"
         android:layout_marginTop="@dimen/view_margin_top"
         android:layout_marginRight="@dimen/view_set_margin_left_right"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        tools:ignore="UselessParent">
 
         <EditText
             android:id="@+id/et_url"
