--- a/TobotApp/src/main/res/layout/recycler_item_device.xml
+++ b/TobotApp/src/main/res/layout/recycler_item_device.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="@dimen/layout_item_height"
     android:gravity="center_vertical">
@@ -17,5 +18,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:textColor="@color/tv_tips"
-        android:textSize="@dimen/tv_tips" />
+        android:textSize="@dimen/tv_tips"
+        tools:ignore="RelativeOverlap" />
 </RelativeLayout>
