--- a/TobotApp/src/main/res/layout/activity_contact_us.xml
+++ b/TobotApp/src/main/res/layout/activity_contact_us.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -23,12 +24,14 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="@dimen/view_margin_left_right"
                 android:layout_marginRight="@dimen/view_margin_left_right"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                tools:ignore="UselessParent">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    tools:ignore="UseCompoundDrawables">
 
                     <ImageView
                         android:layout_width="@dimen/iv_wei_xin_size"
