--- a/TobotApp/src/main/res/layout/activity_main.xml
+++ b/TobotApp/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -17,7 +18,8 @@
         android:layout_marginTop="@dimen/view_margin_top"
         android:layout_marginRight="@dimen/view_margin_top"
         android:textColor="@color/tv_pose_show"
-        android:textSize="@dimen/tv_mode_tips" />
+        android:textSize="@dimen/tv_mode_tips"
+        tools:ignore="RelativeOverlap" />
 
     <TextView
         android:id="@+id/tv_pose_show"
