--- a/TobotApp/src/main/res/layout/activity_navigate_option.xml
+++ b/TobotApp/src/main/res/layout/activity_navigate_option.xml
@@ -27,7 +27,8 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="@dimen/view_margin_left_right"
                 android:layout_marginRight="@dimen/view_margin_left_right"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                tools:ignore="UselessParent">
 
                 <TextView
                     style="@style/tv_content"
@@ -170,7 +171,8 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
-                        android:background="@drawable/selector_switch" />
+                        android:background="@drawable/selector_switch"
+                        tools:ignore="RelativeOverlap" />
                 </RelativeLayout>
 
                 <View style="@style/view_line" />
