--- a/TobotApp/src/main/res/layout/dialog_sensor_warning.xml
+++ b/TobotApp/src/main/res/layout/dialog_sensor_warning.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
@@ -26,7 +27,8 @@
             android:gravity="center"
             android:text="@string/tv_sensor_warning_title"
             android:textColor="@color/tv_white"
-            android:textSize="@dimen/tv_title" />
+            android:textSize="@dimen/tv_title"
+            tools:ignore="RelativeOverlap" />
 
         <ImageView
             android:id="@+id/iv_close"
