--- a/TobotApp/src/main/res/layout/dialog_task_execute_confirm.xml
+++ b/TobotApp/src/main/res/layout/dialog_task_execute_confirm.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/tv_white"
@@ -25,7 +26,8 @@
                 android:layout_marginTop="@dimen/view_margin_top"
                 android:layout_marginRight="@dimen/view_margin_left_right"
                 android:layout_marginBottom="@dimen/view_margin_top"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                tools:ignore="UselessParent">
 
                 <TextView
                     android:id="@+id/tv_content"
