--- a/TobotApp/src/main/res/layout/recycler_item_location.xml
+++ b/TobotApp/src/main/res/layout/recycler_item_location.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="@dimen/layout_item_height"
     android:gravity="center_vertical">
@@ -16,7 +17,8 @@
         android:layout_marginLeft="@dimen/tv_location_margin_left"
         android:layout_toRightOf="@id/btn_location"
         android:textColor="@color/tv_white"
-        android:textSize="@dimen/tv_tips" />
+        android:textSize="@dimen/tv_tips"
+        tools:ignore="RelativeOverlap" />
 
     <Button
         android:id="@+id/btn_edit"
