--- a/TobotApp/src/main/res/layout/recycler_item_upgrade_file.xml
+++ b/TobotApp/src/main/res/layout/recycler_item_upgrade_file.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="@dimen/layout_item_height">
 
@@ -9,7 +10,8 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:textColor="@drawable/selector_tv_map_item"
-        android:textSize="@dimen/tv_content" />
+        android:textSize="@dimen/tv_content"
+        tools:ignore="RelativeOverlap" />
 
     <Button
         android:id="@+id/btn_delete"
